# cobase

./: .gitignore  Cargo.toml  docker-compose.yml  lerna.json  package.json  realm-export.json
.docker/: .env  nginx.conf
.github/workflows/: testing.yml
api/: .env  .eslintrc  Cargo.toml  jest.config.js  package.json  tsconfig.json
api/src/: app_config.rs  group.rs  main.rs  response.rs
api/src/__tests__/: base.ts  group.spec.ts
core/: Cargo.toml
core/src/: bus.rs  error.rs  event.rs  lib.rs  publisher.rs
core/src/group/: aggregate.rs  command.rs  event.rs  query.rs
web/: .env  .gitignore  codecept.conf.js  index.html  package.json  tsconfig.json  vite.config.ts
web/public/: navbar_data.json
web/src/: App.tsx  main.tsx
web/src/core/: api.ts  keycloak.ts  sentry.ts
web/src/routes/: ContactsPage.tsx  RootRoutes.tsx  app_fr.ts  constants.ts
web/tests/: custom_helper.ts  group.desktop.spec.ts  group_test.ts  index.ts  steps.d.ts
web/types/: env.d.ts
worker/: .env  Cargo.toml  package.json
worker/src/: app_config.rs  main.rs
