[package]
name = "cobase-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.1"
actix-cors = "0.6.0-beta.1"
actix-web = "4.0.0-beta.5"
actix-web-middleware-keycloak-auth = { git = "https://github.com/dsferruzza/actix-web-middleware-keycloak-auth", branch = "actix-web-4" }
cobase-core = { path = "../core" }
config = "0.10.1"
couchbase = { version = "1.0.0-alpha.4", features = ["volatile"] }
dotenv = "0.15.0"
env_logger = "0.8.3"
eventstore = "1.0.0"
lazy_static = "1.4.0"
log = "0.4.14"
nanoid = "0.3.0"
serde = "1.0.124"
serde_json = "1.0.64"
sentry = "0.22.0"
sentry-actix = "0.22.0"
sentry-log = "0.22.0"
