[package]
name = "cobase-core"
version = "0.1.0"
authors = ["jonathanlapiquonne"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.1"
async-trait = "0.1.42"
chrono = "0.4.19"
couchbase = { version = "1.0.0-alpha.4", features = ["volatile"] }
eventstore = "1.0.0"
futures = "0.3.7"
lazy_static = "1.4.0"
log = "0.4.14"
mobc = "0.7.2"
mobc-redis = "0.7.0"
nanoid = "0.3.0"
tokio = { version = "1.4.0", features = ["time"] }
serde = "1.0.124"
serde_json = "1.0.64"
strum = "0.20.0"
strum_macros = "0.20.1"
validator = { version = "0.13.0", features = ["derive"] }
