[package]
name = "cobase-worker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.1"
async-trait = "0.1.42"
actix-web = "4.0.0-beta.5"
cobase-core = { path = "../core" }
config = "0.10.1"
couchbase = { version = "1.0.0-alpha.4", features = ["volatile"] }
dotenv = "0.15.0"
env_logger = "0.8.3"
eventstore = "1.0.0"
lazy_static = "1.4.0"
log = "0.4.14"
mobc = "0.7.2"
mobc-redis = "0.7.0"
serde = "1.0.124"
serde_json = "1.0.64"
sentry = "0.22.0"
sentry-log = "0.22.0"
